dropdown: correct z-index

--- a/src/scss/widgets/basics.scss
+++ b/src/scss/widgets/basics.scss
@@ -427,7 +427,7 @@
     --widget-padding: 1rem;
     --text-padding: calc(var(--widget-padding) + 8rem);
 
-    z-index: initial!important;
+    // z-index: initial!important;
     // contain: style size;
 
     --size: 300rem;
